# src/modules/account-balances/dtos/update-account-reconciliation.dto.ts
@@ -1,0 +1,6 @@
+import { PartialType } from '@nestjs/swagger';
+import { CreateAccountReconciliationDto } from '@modules/account-balances/dtos/create-account-reconciliation.dto';
+
+export class UpdateAccountReconciliationDto extends PartialType(
+  CreateAccountReconciliationDto,
+) {}
